--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -69,7 +69,7 @@ jobs:
         echo "CONFIG_FIRMWARE_INCLUDE_MENTOHUST=n" >> .config #MENTOHUST
         echo "CONFIG_FIRMWARE_INCLUDE_SCUTCLIENT=n" >> .config #SCUTCLIENT
         echo "CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=y" >> .config #SS plus+
-        echo "CONFIG_FIRMWARE_INCLUDE_SSOBFS=n" >> .config # simple-obfs混淆插件
+        echo "CONFIG_FIRMWARE_INCLUDE_SSOBFS=y" >> .config # simple-obfs混淆插件
         echo "CONFIG_FIRMWARE_INCLUDE_SSSERVER=n" >> .config #SS server
         echo "CONFIG_FIRMWARE_INCLUDE_DNSFORWARDER=n" >> .config #DNSFORWARDER
         echo "CONFIG_FIRMWARE_INCLUDE_ADBYBY=y" >> .config #adbyby plus+
@@ -94,6 +94,88 @@ jobs:
         #格式如下：
         #sed -i '/自定义项/d' .config
         #echo "自定义项=y" >> .config
+        echo "CONFIG_FIRMWARE_ENABLE_FAT=n" >> .config#
+        echo "CONFIG_FIRMWARE_ENABLE_EXFAT=n" >> .config#
+        echo "CONFIG_FIRMWARE_ENABLE_EXT2=y" >> .config
+        echo "CONFIG_FIRMWARE_ENABLE_UFSD=n" >> .config
+        echo "CONFIG_FIRMWARE_ENABLE_EXT3=y" >> .config
+        echo "CONFIG_FIRMWARE_ENABLE_EXT4=y" >> .config
+        echo "CONFIG_FIRMWARE_ENABLE_XFS=n" >> .config
+        echo "CONFIG_FIRMWARE_ENABLE_FUSE=y" >> .config
+        echo "CONFIG_FIRMWARE_ENABLE_SWAP=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_UVC=n" >> .config#
+        echo "CONFIG_FIRMWARE_INCLUDE_HID=n" >> .config#
+        echo "CONFIG_FIRMWARE_INCLUDE_SERIAL=n" >> .config#
+        echo "CONFIG_FIRMWARE_INCLUDE_AUDIO=n" >> .config#
+        echo "CONFIG_FIRMWARE_INCLUDE_XFRM=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_QOS=y" >> .config#
+        echo "CONFIG_FIRMWARE_INCLUDE_IMQ=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_IFB=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_IPSET=y" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_NFSD=n" >> .config#
+        echo "CONFIG_FIRMWARE_INCLUDE_NFSC=n" >> .config#
+        echo "CONFIG_FIRMWARE_INCLUDE_CIFS=y" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_LANG_CN=y" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_NTFS_3G=n" >> .config#
+        echo "CONFIG_FIRMWARE_INCLUDE_ANTFS=n" >> .config#
+        echo "CONFIG_FIRMWARE_INCLUDE_LPRD=n" >> .config#
+        echo "CONFIG_FIRMWARE_INCLUDE_U2EC=y" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_HDPARM=y" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_PARTED=y" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_SMBD=y" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_SMBD36=y" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_WINS=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_FTPD=y" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_RPL2TP=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_EAP_PEAP=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_DDNS_SSL=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_HTTPS=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_SFTP=y" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_DROPBEAR=y" >> .config#
+        echo "CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE=y" >> .config#
+        echo "CONFIG_FIRMWARE_INCLUDE_OPENSSH=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_OPENVPN=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_SSWAN=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=n" >> .config#
+        echo "CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_XUPNPD=n" >> .config#
+        echo "CONFIG_FIRMWARE_INCLUDE_MINIDLNA=n" >> .config#
+        echo "CONFIG_FIRMWARE_INCLUDE_FIREFLY=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW=n" >> .config#
+        echo "CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_ARIA=n" >> .config#
+        echo "CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=n" >> .config#
+        echo "CONFIG_FIRMWARE_INCLUDE_CURL=y" >> .config
+        ##echo "CONFIG_FIRMWARE_INCLUDE_SCUTCLIENT=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_GDUT_DRCOM=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_DOGCOM=y" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_MINIEAP=y" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_NJIT_CLIENT=y" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_NAPT66=y" >> .config
+        ##echo "CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=y" >> .config
+        ##echo "CONFIG_FIRMWARE_INCLUDE_SSSERVER=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_SERVER=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CLIENT=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CMD=n" >> .config
+        ##echo "CONFIG_FIRMWARE_INCLUDE_DNSFORWARDER=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_VLMCSD=y" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_TTYD=y" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_LRZSZ=y" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_HTOP=y" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_NANO=y" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_IPERF3=y" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_DUMP1090=y" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_RTL_SDR=y" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_MTR=y" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_SOCAT=y" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_SRELAY=y" >> .config
+        ##echo "CONFIG_FIRMWARE_INCLUDE_MENTOHUST=n" >> .config
+        ##echo "CONFIG_FIRMWARE_INCLUDE_FRPC=n" >> .config
+        ##echo "CONFIG_FIRMWARE_INCLUDE_FRPS=n" >> .config
+        ##echo "CONFIG_FIRMWARE_INCLUDE_TUNSAFE=y" >> .config
         #########################################################################################
         sudo ./clear_tree
         sudo ./build_firmware_modify $TNAME 0
